Started created of a simplified system of input manipulators

--- a/src/lab3d/app/manipulator/CMakeLists.txt
+++ b/src/lab3d/app/manipulator/CMakeLists.txt
@@ -2,24 +2,24 @@
 # Build the Module
 ################################################################################
 
-CORAL_GENERATE_MODULE( _MODULE_SOURCES lab3d.core.domain )
+CORAL_GENERATE_MODULE( _MODULE_SOURCES lab3d.app.manipulator )
 
 INCLUDE_DIRECTORIES( ${CMAKE_CURRENT_SOURCE_DIR} ${OPENSCENEGRAPH_INCLUDE_DIRS} ${CORAL_INCLUDE_DIRS} ${CMAKE_CURRENT_BINARY_DIR}/generated )
 
 FILE( GLOB _SOURCE_FILES *.cpp )
 FILE( GLOB _HEADER_FILES *.h )
 
-ADD_LIBRARY( domain MODULE ${_HEADER_FILES} ${_SOURCE_FILES} ${_MODULE_SOURCES} )
-SET_TARGET_PROPERTIES( domain PROPERTIES
-	PROJECT_LABEL "domain"
-	FOLDER "lab3d.core"
+ADD_LIBRARY( manipulator MODULE ${_HEADER_FILES} ${_SOURCE_FILES} ${_MODULE_SOURCES} )
+SET_TARGET_PROPERTIES( manipulator PROPERTIES
+	PROJECT_LABEL "manipulator"
+	FOLDER "lab3d.app"
 )
 
-TARGET_LINK_LIBRARIES( domain ${CORAL_LIBRARIES} ${OPENSCENEGRAPH_LIBRARIES} )
+TARGET_LINK_LIBRARIES( manipulator ${CORAL_LIBRARIES} ${OPENSCENEGRAPH_LIBRARIES} )
 
-CORAL_MODULE_TARGET( "lab3d.core.domain" domain )
+CORAL_MODULE_TARGET( "lab3d.app.manipulator" manipulator )
 
-INSTALL( DIRECTORY ${CMAKE_BINARY_DIR}/modules/lab3d/core/domain DESTINATION modules PATTERN "_debug" EXCLUDE )
+INSTALL( DIRECTORY ${CMAKE_BINARY_DIR}/modules/lab3d/app/manipulator DESTINATION modules PATTERN "_debug" EXCLUDE )
 
 ################################################################################
 # Source Groups
