--- a/src/lab3d/viewer/manipulator/CMakeLists.txt
+++ b/src/lab3d/viewer/manipulator/CMakeLists.txt
@@ -2,7 +2,7 @@
 # Build the Module
 ################################################################################
 
-CORAL_GENERATE_MODULE( _MODULE_SOURCES lab3d.app.manipulator )
+CORAL_GENERATE_MODULE( _MODULE_SOURCES lab3d.viewer.manipulator )
 
 INCLUDE_DIRECTORIES( ${CMAKE_CURRENT_SOURCE_DIR} ${OPENSCENEGRAPH_INCLUDE_DIRS} ${CORAL_INCLUDE_DIRS} ${CMAKE_CURRENT_BINARY_DIR}/generated )
 
@@ -12,14 +12,14 @@ FILE( GLOB _HEADER_FILES *.h )
 ADD_LIBRARY( manipulator MODULE ${_HEADER_FILES} ${_SOURCE_FILES} ${_MODULE_SOURCES} )
 SET_TARGET_PROPERTIES( manipulator PROPERTIES
 	PROJECT_LABEL "manipulator"
-	FOLDER "lab3d.app"
+	FOLDER "lab3d.viewer"
 )
 
 TARGET_LINK_LIBRARIES( manipulator ${CORAL_LIBRARIES} ${OPENSCENEGRAPH_LIBRARIES} )
 
-CORAL_MODULE_TARGET( "lab3d.app.manipulator" manipulator )
+CORAL_MODULE_TARGET( "lab3d.viewer.manipulator" manipulator )
 
-INSTALL( DIRECTORY ${CMAKE_BINARY_DIR}/modules/lab3d/app/manipulator DESTINATION modules PATTERN "_debug" EXCLUDE )
+INSTALL( DIRECTORY ${CMAKE_BINARY_DIR}/modules/lab3d/viewer/manipulator DESTINATION modules PATTERN "_debug" EXCLUDE )
 
 ################################################################################
 # Source Groups
