Several minor fixes and tweaks.

--- a/src/lab3d/scene/CMakeLists.txt
+++ b/src/lab3d/scene/CMakeLists.txt
@@ -4,7 +4,7 @@
 
 CORAL_GENERATE_MODULE( _MODULE_SOURCES lab3d.scene lab3d.dom.BoundingBox )
 
-INCLUDE_DIRECTORIES( ${CMAKE_CURRENT_SOURCE_DIR} ${OPENSCENEGRAPH_INCLUDE_DIRS} ${CORAL_INCLUDE_DIRS} ${CMAKE_CURRENT_BINARY_DIR}/generated )
+INCLUDE_DIRECTORIES( "${CMAKE_CURRENT_BINARY_DIR}/generated" ${OPENSCENEGRAPH_INCLUDE_DIRS} )
 
 FILE( GLOB _SOURCE_FILES *.cpp )
 FILE( GLOB _HEADER_FILES *.h )
@@ -15,7 +15,7 @@ SET_TARGET_PROPERTIES( scene PROPERTIES
 	FOLDER "lab3d"
 )
 
-TARGET_LINK_LIBRARIES( scene ${CORAL_LIBRARIES} ${OPENSCENEGRAPH_LIBRARIES} )
+TARGET_LINK_LIBRARIES( scene ${OPENSCENEGRAPH_LIBRARIES} )
 
 CORAL_MODULE_TARGET( "lab3d.scene" scene )
 
