--- a/src/lab3d/dom/CMakeLists.txt
+++ b/src/lab3d/dom/CMakeLists.txt
@@ -4,7 +4,7 @@
 
 CORAL_GENERATE_MODULE( _MODULE_SOURCES lab3d.dom qt.ISystem qt.ITimerCallback )
 
-INCLUDE_DIRECTORIES( ${CMAKE_CURRENT_SOURCE_DIR} ${OPENSCENEGRAPH_INCLUDE_DIRS} ${CORAL_INCLUDE_DIRS} ${CMAKE_CURRENT_BINARY_DIR}/generated )
+INCLUDE_DIRECTORIES( "${CMAKE_CURRENT_BINARY_DIR}/generated" )
 
 FILE( GLOB _SOURCE_FILES *.cpp )
 FILE( GLOB _HEADER_FILES *.h )
@@ -14,8 +14,6 @@ SET_TARGET_PROPERTIES( dom PROPERTIES
 	PROJECT_LABEL "dom"
 	FOLDER "lab3d"
 )
-
-TARGET_LINK_LIBRARIES( dom ${CORAL_LIBRARIES} ${OPENSCENEGRAPH_LIBRARIES} )
 
 CORAL_MODULE_TARGET( "lab3d.dom" dom )
 
