--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,29 +1,17 @@
 ################################################################################
-# Common Build Settings
-################################################################################
-
-set_property( DIRECTORY APPEND PROPERTY COMPILE_DEFINITIONS
-	"EIGEN_DONT_VECTORIZE"
-	"EIGEN_DONT_ALIGN_STATICALLY"
-	"EIGEN_DISABLE_UNALIGNED_ARRAY_ASSERT"
-)
-
-################################################################################
 # Subdirectories
 ################################################################################
 
-add_subdirectory( lab3d )
 add_subdirectory( lab3d.dom )
 add_subdirectory( lab3d.scene )
-add_subdirectory( lab3d.manipulator )
 
 ################################################################################
 # Run Target
 ################################################################################
 
 CORAL_GET_PATH_STRING( CORAL_PATH_STR )
-set( RUN_ARGS -p "${CORAL_PATH_STR}" lua.Launcher lab3d.Main
-	DEPENDS lab3d lab3d.dom lab3d.scene lab3d.manipulator
+set( RUN_ARGS -p "${CORAL_PATH_STR}" lab3d.App
+	DEPENDS lab3d.dom lab3d.scene
 )
 add_custom_target( run ${CORAL_LAUNCHER} ${RUN_ARGS}
 	COMMENT "Starting application..."
